--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "valcon-youtube-downloader-api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server.cjs",
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
